tests/spec/pass/channel_buffered_basic.aja
ch = chan(2)
send(ch, 10)
send(ch, 20)
print(recv(ch))
print(recv(ch))
