tests/spec/fail/recv_closed_chan.aja
ch = chan()
close(ch)
recv(ch)
